Wire JSON parsing errors to chrome://policy

cloud_policy_generated.cc parses JSON for certain policies in a
function called DecodeJSON - however, if the JSON is invalid, it
simply drops the invalid policy with no visible warning. This CL
wires errors through by adding an error field to PolicyMap.
The different possible designs are compared internally at
go/decodejsonfix

Bug: 853719
Change-Id: I98979183ac54278710f1ac57e5a48f2a9eee0b59
Reviewed-on: https://chromium-review.googlesource.com/1104354
Reviewed-by: Pavol Marko <pmarko@chromium.org>
Reviewed-by: Lutz Justen <ljusten@chromium.org>
Commit-Queue: A Olsen <olsen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571449}
Former-commit-id: ee12168335bb938345797e2926c83968d5ccad9a