components/policy/core/common/policy_map.h
@@ -30,6 +30,7 @@ class POLICY_EXPORT PolicyMap {
     PolicyLevel level = POLICY_LEVEL_RECOMMENDED;
     PolicyScope scope = POLICY_SCOPE_USER;
     std::unique_ptr<base::Value> value;
+    std::string error;
     std::unique_ptr<ExternalDataFetcher> external_data_fetcher;
 
     // For debugging and displaying only. Set by provider delivering the policy.
@@ -69,15 +70,22 @@ class POLICY_EXPORT PolicyMap {
   const base::Value* GetValue(const std::string& policy) const;
   base::Value* GetMutableValue(const std::string& policy);
 
-  // Overwrites any existing information stored in the map for the key
-  // |policy|.
+  // Overwrites any existing information stored in the map for the key |policy|.
+  // Resets the error for that policy to the empty string.
   void Set(const std::string& policy,
            PolicyLevel level,
            PolicyScope scope,
            PolicySource source,
            std::unique_ptr<base::Value> value,
            std::unique_ptr<ExternalDataFetcher> external_data_fetcher);
+
   void Set(const std::string& policy, Entry entry);
+
+  // Adds an |error| to the map for the key |policy| that should be shown to the
+  // user alongside the value in the policy UI. This is equivalent to calling
+  // |GetMutableValue(policy)->error = error|, so should only be called for
+  // policies that are already stored in this map.
+  void SetError(const std::string& policy, const std::string& error);
 
   // For all policies, overwrite the PolicySource with |source|.
   void SetSourceForAll(PolicySource source);
